samples/_failures_safe/1761725854_5b3b2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88e30aa6.c: In function ‘main’:
./samples/SAFE/__tmp_88e30aa6.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
